<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/wpg_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/geinsboro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/world_part_label_game"
        app:titleTextColor="@color/arrow_color" />

    <com.shadowzilot.callcountry.views.TimerView
        android:id="@+id/wpg_timer"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wpg_toolbar"
        app:tv_ringWidth="6dp"
        app:tv_strokeColor="@color/correct_answer_background"
        app:tv_strokeWidth="12dp"
        app:tv_textSize="36sp" />

    <TextView
        android:id="@+id/score_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_label"
        app:layout_constraintBottom_toTopOf="@id/wpg_divider"
        app:layout_constraintStart_toStartOf="@id/wpg_divider" />

    <TextView
        android:id="@+id/score_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textColor="@color/arrow_color"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/wpg_divider"
        app:layout_constraintEnd_toEndOf="@id/wpg_divider"
        app:layout_constraintStart_toStartOf="@id/wpg_divider" />

    <View
        android:id="@+id/wpg_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/teal_700"
        app:layout_constraintBottom_toTopOf="@id/game_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wpg_timer" />

    <FrameLayout
        android:id="@+id/game_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/wpg_divider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.shadowzilot.callcountry.views.WorldPartButton
            android:id="@+id/wpg_answers"
            android:layout_width="280dp"
            android:layout_height="280dp"
            android:layout_gravity="center"
            android:rotation="-29"
            app:wb_button_colors="@array/world_parts_colors"
            app:wb_stroke_width="40dp"
            app:wb_text_array="@array/world_parts_game"
            app:wb_text_size="16sp" />

        <ImageView
            android:id="@+id/wpg_image_flag"
            android:layout_width="140dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            tools:src="@tools:sample/avatars" />

    </FrameLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pause_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="@drawable/paused_background"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/pause_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="36sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/paused_label"
            android:layout_marginBottom="128dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/wpg_resume_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/answer_filed"
            android:text="@string/resume_bt_label"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/pause_label"
            app:layout_constraintStart_toEndOf="@id/pause_label"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/wpg_leave_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/answer_filed"
            android:text="@string/leave_bt_label"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/pause_label"
            app:layout_constraintEnd_toStartOf="@id/pause_label"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>